<resources>
    <string name="app_name">BidIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_photo">Add Photo</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_start_price">Start Price</string>
    <string name="edit_text_hint_end_date">End Date</string>
    <string name="edit_text_hint_start_date">Start Date</string>
    <string name="edit_text_hint_buy_now_price">Buy Now Price</string>
    <string name="text_view_hint_choose_date">Choose Date</string>
    <string name="text_view_hint_choose_time">Choose Time</string>
    <string name="btn_save">Save</string>


    <string name="nav_create_account">Create Account</string>
    <string name="nav_help">Help</string>
    <string name="nav_history">History</string>
    <string name="nav_my_account">My Account</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_balance">Balance</string>
    <string name="nav_my_items">My Items</string>
    <string name="nav_log_out">Log Out</string>
    <string name="facebook_app_id">507036556406939</string>
    <string name="nav_add_item">Add Item</string>
    <string name="fb_login_protocol_scheme">fb507036556406939</string>

    <string name="permission_rationale">"Storage permission is needed for fetching images from Gallery."</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Failed</string>
    <string name="facebook_title_text">Title</string>
    <string name="nav_about_us">About Us</string>
    <string name="hint_email">Email</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_show">show</string>
    <string name="hint_name">name</string>
    <string name="hint_password">Password</string>
    <string name="hint_surname">surname</string>
    <string name="hint_phone">phone</string>
    <string name="hint_passport_series">passport seria</string>
    <string name="wrong_passwords_message">Passwords are different</string>
    <string name="empty_fields_message">Empty Fields</string>
    <string name="invalid_email_message">Invalid Email</string>
    <string name="nav_login">Log In</string>
    <string name="registration_complated_message">Completed</string>
    <string name="wrong_email_or_password_message">Wrong Email or Password</string>

    <string name="temp_string">temptemp</string>
    <string name="text_complete">Complete</string>

    <string name="txt_auction_start_date">Start in</string>
    <string name="txt_auction_duration">Duration</string>
    <string name="txt_auction_start_price">Start price</string>
    <string name="txt_auction_current_price">current price</string>
    <string name="add_image_messege">Add Image</string>
    <string name="wrong_date_messege">Wrong Date</string>
    <string name="choose_category_messege">Choose Category</string>

    <string name="show_item_activity_bit_hint">Enter bid price</string>
    <string name="item_price_text">price</string>
    <string name="item_start_date_text">start date</string>
    <string name="item_follower_text">follower</string>
    <string name="text_cancel">Cancel</string>
    <string name="activity_name_favorites">Favorites</string>
    <string name="activity_name_my_items">My Items</string>
    <string name="activity_name_add_item">Add Item</string>

    <string name="my_keyboard">MyKeyboard</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="verification_message">Verify YOur Account</string>
    <string name="my_items">My Items</string>
    <string name="code_text">code</string>
    <string name="card_number_text">card number</string>
    <string name="amount_text">amount</string>
    <string name="add_money_text">Add Money</string>
    <string name="camera_text">Camera</string>
    <string name="gallery_text">Gallery</string>
    <string name="custom_keyboard_1">1</string>
    <string name="custom_keyboard_2">2</string>
    <string name="custom_keyboard_3">3</string>
    <string name="custom_keyboard_4">4</string>
    <string name="custom_keyboard_5">5</string>
    <string name="custom_keyboard_6">6</string>
    <string name="custom_keyboard_7">7</string>
    <string name="custom_keyboard_8">8</string>
    <string name="custom_keyboard_9">9</string>
    <string name="custom_keyboard_0">0</string>
    <string name="custom_keyboard_bid">Bid</string>

</resources>
