<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_group_signed">
        <item
            android:id="@+id/nav_item_my_account"
            android:title="@string/nav_my_account" />
        <item
            android:id="@+id/nav_item_balance"
            android:title="@string/nav_balance" />
        <item
            android:id="@+id/nav_item_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_item_favorite"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_item_my_items"
            android:title="@string/nav_my_items" />

        <item
            android:id="@+id/nav_item_log_out"
            android:title="@string/nav_log_out" />

    </group>

    <group
        android:id="@+id/menu_group_seen_always">
        <item
            android:id="@+id/nav_item_log_in"
            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_item_help"
            android:title="@string/nav_help" />
        <item
            android:id="@+id/nav_item_about_us"
            android:title="@string/nav_about_us" />

    </group>


</menu>
