<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_logo"
    android:background="@color/item_background">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_text_card_number_add_money_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_normal"
        android:hint="@string/card_number_text"
        android:padding="@dimen/padding_small"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/color_text_login_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_text_card_code_add_money_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_normal"
        android:hint="@string/code_text"
        android:padding="@dimen/padding_small"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/color_text_login_light_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_card_number_add_money_dialog" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_text_money_amount_add_money_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_normal"
        android:hint="@string/amount_text"
        android:padding="@dimen/padding_small"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/color_text_login_light_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_card_code_add_money_dialog" />

    <Button
        android:id="@+id/btn_add_money_dialog_add_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:background="@drawable/shape_blue_gradient_90_degree"
        android:padding="@dimen/padding_small"
        android:text="@string/add_money_text"
        android:textStyle="bold"
        android:textColor="@color/item_background"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>