<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fnBtn="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/aaa"
    tools:context="com.example.user.bidit.activities.MyAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

    </LinearLayout>


    <LinearLayout
        android:background="@drawable/gradient_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:textColor="@color/color_text_login_light_grey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_account_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_surname"
                android:inputType="textPersonName"
                android:textColor="@color/color_text_login_light_grey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_account_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:textColor="@color/color_text_login_light_grey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_account_passport_series"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_passport_series"
                android:textColor="@color/color_text_login_light_grey" />
        </android.support.design.widget.TextInputLayout>

        <com.ekalips.fancybuttonproj.FancyButton
            android:id="@+id/btn_change_info_account_activity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            fnBtn:btnStyle="stroke_fill"
            fnBtn:fillColor="@null"
            fnBtn:hideFillAfterCollapse="false"
            fnBtn:progressColor="@color/colorAccent"
            fnBtn:strokeColor="@color/colorAccent"
            fnBtn:text="Change"
            fnBtn:textColor="@color/color_text_login_light_grey" />

    </LinearLayout>
</LinearLayout>
