<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    android:orientation="vertical"
    android:paddingEnd="@dimen/padding_extra_large"
    android:paddingStart="@dimen/padding_extra_large"
    tools:context="com.example.user.bidit.activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_email_login_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawablePadding="@dimen/padding_small"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/color_text_login_light_grey"
            android:textColorHint="@color/color_hint_login_dark_grey"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:id="@+id/email_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@color/color_hint_login_dark_grey" />

        <EditText
            android:id="@+id/edit_text_password_login_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@null"
            android:drawablePadding="@dimen/padding_small"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/color_text_login_light_grey"
            android:textColorHint="@color/color_hint_login_dark_grey"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:id="@+id/password_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@color/color_hint_login_dark_grey" />

        <Button
            android:id="@+id/btn_log_in_login_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:background="@drawable/login_button"
            android:text="@string/text_sign_in"
            android:textColor="@color/color_text_login_light_grey"
            android:textSize="@dimen/text_size_normal" />

        <Button
            android:id="@+id/btn_registration_login_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/reg_button"
            android:text="@string/text_sign_up"
            android:textColor="@color/color_text_login_light_grey"
            android:textSize="@dimen/text_size_normal" />

        <Button
            android:id="@+id/btn_facebook_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

    </LinearLayout>
</LinearLayout>
