<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.user.bidit.fragments.MyAccountFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="horizontal"
        android:padding="@dimen/padding_normal">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textSize="@dimen/recycler_view_item_text_size_large" />

        <EditText
            android:id="@+id/text_view_name_my_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="new name"
            android:textSize="@dimen/recycler_view_item_text_size_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="horizontal"
        android:padding="@dimen/padding_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_surname"
            android:textSize="@dimen/recycler_view_item_text_size_large" />

        <EditText
            android:id="@+id/text_view_surname_my_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="new surname"
            android:textSize="@dimen/recycler_view_item_text_size_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="horizontal"
        android:padding="@dimen/padding_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textSize="@dimen/recycler_view_item_text_size_large" />

        <EditText
            android:id="@+id/text_view_email_my_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="new email"
            android:textSize="@dimen/recycler_view_item_text_size_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="horizontal"
        android:padding="@dimen/padding_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:textSize="@dimen/recycler_view_item_text_size_large" />

        <EditText
            android:id="@+id/text_view_phone_my_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="new phone"
            android:textSize="@dimen/recycler_view_item_text_size_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="horizontal"
        android:padding="@dimen/padding_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_passport_seria"
            android:textSize="@dimen/recycler_view_item_text_size_large" />

        <EditText
            android:id="@+id/text_view_passport_my_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="passport"
            android:textSize="@dimen/recycler_view_item_text_size_large" />
    </LinearLayout>

    <Button
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="change"
        android:visibility="gone"/>
    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="edit"/>

</LinearLayout>
